Get rid of lamp color and change saturation

--- a/src/index.css
+++ b/src/index.css
@@ -5,17 +5,16 @@
   --c-active: color(display-p3 0.463 0.463 0.499 / 0.12);
   --c-action: color(display-p3 0.463 0.463 0.499 / 0.24);
   --c-depth: color(display-p3 0.961 0.961 0.968 / 0.6);
-  --c-glass: color(display-p3 0.967 0.976 0.998);
+  --c-glass: color(display-p3 0.934 0.956 0.996);
   --c-primary: color(display-p3 0.969 0.969 0.976);
   --c-surface: color(display-p3 0.431 0.431 0.449);
   --c-grey: color(display-p3 0.631 0.631 0.649);
   --c-blue: color(display-p3 0.187 0.436 0.86);
   --c-ring: color(display-p3 0.166 0.394 0.773);
-  --c-pressure: color(display-p3 0.984 0.909 0.904);
+  --c-pressure: color(display-p3 0.988 0.932 0.846);
   --c-heat: color(display-p3 0.9 0.214 0.328);
   --c-red: color(display-p3 0.77 0.182 0.164);
-  --c-ghost: color(display-p3 0.926 0.998 0.945);
-  --c-lamp: color(display-p3 0.991 0.966 0.802);
+  --c-ghost: color(display-p3 0.851 0.976 0.903);
   --c-black: color(display-p3 0.11 0.11 0.117);
   --c-backdrop: color(display-p3 0.259 0.259 0.27 / 0.7);
   --c-dark: color(display-p3 0 0 0);
@@ -266,16 +265,12 @@ a:focus-visible {
   background-color: var(--c-backdrop);
 }
 
-.alice {
-  background-color: var(--c-lamp);
-}
-
 .red {
   color: var(--c-red);
 }
 
 .card-sup {
-  color: var(--c-lamp);
+  color: var(--c-pressure);
 }
 
 .shape {
