--- a/src/pages/Profile/Expert/Expert.css
+++ b/src/pages/Profile/Expert/Expert.css
@@ -1,13 +1,5 @@
 :root {
-  --c-lavender: color(display-p3 0.909 0.868 0.99);
-}
-
-.document {
-  background-color: var(--c-lavender);
-}
-
-.alice {
-  background-color: var(--c-lamp);
+  --c-lamp: color(display-p3 0.945 0.911 0.993);
 }
 
 .items-end {
@@ -90,6 +82,14 @@
   flex-grow: 1;
 }
 
+.alice {
+  background-color: var(--c-lamp);
+}
+
+.list-item {
+  background-color: var(--c-ambient);
+}
+
 @media screen and (max-width: 1052px) {
   .ornament {
     border-radius: 0;
@@ -113,7 +113,7 @@
 
 @keyframes toast-enter {
   0% {
-    opacity: 0.01;
+    opacity: 0.7;
     transform: translateY(100%);
   }
 
