--- a/src/pages/Relax/FaceTime/FaceTime.css
+++ b/src/pages/Relax/FaceTime/FaceTime.css
@@ -25,9 +25,10 @@ video {
   -webkit-backdrop-filter: blur(var(--s-indicator));
 }
 
-.stream-status {
-  position: absolute;
+.toast-list {
+  position: fixed;
   left: 50%;
-  top: var(--s-screen);
-  transform: translateX(-50%);
+  top: 50%;
+  transform: translate(-50%, -50%);
+  list-style: none;
 }
