--- a/src/index.css
+++ b/src/index.css
@@ -389,6 +389,10 @@ a:focus-visible {
   gap: 0.2rem;
 }
 
+.col-span-2 {
+  grid-column: span 2;
+}
+
 button[aria-disabled='true'] {
   cursor: not-allowed;
   color: var(--c-backdrop);
@@ -441,6 +445,10 @@ button[aria-disabled='true'] {
 
   .tab-link {
     display: block;
+  }
+
+  .col-span-2 {
+    grid-column: span 1;
   }
 }
 
