--- a/src/index.css
+++ b/src/index.css
@@ -182,6 +182,10 @@ a:focus-visible {
   align-items: flex-start;
 }
 
+.items-end {
+  align-items: flex-end;
+}
+
 .rounded {
   border-radius: 1.8rem;
 }
