Get colors from ios 17 widgets - calendar

--- a/src/pages/Relax/FaceTime/FaceTime.css
+++ b/src/pages/Relax/FaceTime/FaceTime.css
@@ -17,6 +17,7 @@ video {
   position: absolute;
   top: var(--s-medium);
   left: var(--s-medium);
+  color: var(--c-pressure);
 }
 
 .stream-controls,
