--- a/src/pages/Profile/Expert/Expert.css
+++ b/src/pages/Profile/Expert/Expert.css
@@ -1,7 +1,3 @@
-:root {
-  --c-lamp: color(display-p3 0.945 0.911 0.993);
-}
-
 .items-end {
   align-items: flex-end;
 }
@@ -34,7 +30,7 @@
 }
 
 .carousel {
-  padding: var(--s-system) 0;
+  padding: var(--s-safe) 0;
   overflow-x: scroll;
   scroll-snap-type: x mandatory;
   scroll-behavior: smooth;
@@ -45,11 +41,6 @@
   scroll-snap-align: center;
   flex: 100% 0 0;
   place-content: center;
-}
-
-.edge {
-  padding: var(--s-line);
-  border-radius: var(--s-unit);
 }
 
 .bottom-sheet {
@@ -80,10 +71,6 @@
   font-weight: bold;
 }
 
-.alice {
-  background-color: var(--c-lamp);
-}
-
 .list-item {
   background-color: var(--c-ambient);
 }
@@ -100,7 +87,7 @@
   }
 
   .ornament {
-    bottom: 7.94rem;
+    bottom: var(--s-offset);
     margin: 0 -1.6rem;
   }
 }
