--- a/src/index.css
+++ b/src/index.css
@@ -163,7 +163,7 @@ a:focus-visible {
 
 .term,
 .concise {
-  font-size: 1.6rem;
+  font-size: 1.5rem;
 }
 
 .items-center {
@@ -227,11 +227,14 @@ a:focus-visible {
 
 .btn {
   display: block;
-  padding: 1.48rem var(--s-medium) var(--s-system);
   font-weight: bold;
   letter-spacing: 0.4px;
   border-radius: var(--s-dock);
   text-align: center;
+}
+
+.legible {
+  padding: 1.3rem var(--s-medium);
 }
 
 .contained {
