--- a/src/pages/Privacy/Privacy.css
+++ b/src/pages/Privacy/Privacy.css
@@ -29,7 +29,7 @@
 }
 
 .spy-nav a {
-  padding: 0.4rem var(--s-unit);
+  padding: var(--s-bezel) var(--s-unit);
   margin: var(--s-line) 0;
   color: var(--c-surface);
   transform-origin: left;
