--- a/src/pages/Privacy/Privacy.css
+++ b/src/pages/Privacy/Privacy.css
@@ -48,7 +48,7 @@
 
 .spy-nav a.live::before {
   position: absolute;
-  width: var(--s-indicator);
+  width: var(--s-bezel);
   height: 100%;
   border-radius: var(--s-medium);
   background-color: var(--c-heat);
