Switch all grids to 6 columns

--- a/src/pages/Bag/Bag.css
+++ b/src/pages/Bag/Bag.css
@@ -1,5 +1,13 @@
-@media screen and (max-width: 768px) {
+.bag {
+  grid-column: span 3;
+}
+
+#products > article {
+  grid-column: span 2;
+}
+
+@media screen and (max-width: 1052px) {
   .bag {
-    grid-template-columns: 1fr;
+    grid-column: span 2;
   }
 }
