--- a/src/index.css
+++ b/src/index.css
@@ -126,6 +126,8 @@ a:focus-visible {
 
 .grid {
   display: grid;
+  grid-template-columns: repeat(6, 1fr);
+  grid-auto-flow: dense;
 }
 
 .col {
@@ -309,10 +311,6 @@ a:focus-visible {
   padding: var(--s-line);
 }
 
-.products {
-  grid-template-columns: repeat(2, 1fr);
-}
-
 .proximity {
   gap: 1.8rem;
 }
@@ -402,6 +400,10 @@ a:focus-visible {
   grid-column: span 2;
 }
 
+.col-span-4 {
+  grid-column: span 4;
+}
+
 button[aria-disabled='true'] {
   cursor: not-allowed;
   color: var(--c-backdrop);
@@ -411,6 +413,14 @@ button[aria-disabled='true'] {
 @media screen and (max-width: 1052px) {
   .subtitle {
     overflow-wrap: anywhere;
+  }
+
+  .grid {
+    grid-template-columns: repeat(4, 1fr);
+  }
+
+  .col-span-4 {
+    grid-column: span 2;
   }
 }
 
@@ -459,6 +469,10 @@ button[aria-disabled='true'] {
 
   .tab-link {
     display: block;
+  }
+
+  .grid {
+    grid-template-columns: 1fr;
   }
 
   .col-span-2 {
